[project]
name = "reddit-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for Reddit integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
    "praw",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
reddit-mcp-server = "main:main"
